--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,12 @@ services:
       - "8080:8080"
     volumes:
       - ".:/go/src/app/"
+    depends_on:
+      - postgres
+  postgres:
+    image: postgres:12.4-alpine
+    environment:
+     POSTGRES_USER: postgres
+     POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+     - "5432:5432"
