--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ".:/go/src/app/"
     depends_on:
       - postgres
+    env_file: .env
   postgres:
     image: postgres:12.4-alpine
     environment:
